attempt to fix image resizing issue on iphone

--- a/src/Pages/Page1/Page1.sass
+++ b/src/Pages/Page1/Page1.sass
@@ -136,6 +136,8 @@
 .page1_showcontents
   background: $bc5
 .page1_showcontents_image
+  align-items: start
+  width: 100%
   height: 100%
 
 .page1_showcontents
